refactor:去掉看板娘

--- a/themes/hexo-theme-aomori/layout/layout.ejs
+++ b/themes/hexo-theme-aomori/layout/layout.ejs
@@ -1,7 +1,7 @@
 <%- partial('_partial/head') %>
 <link rel="icon" href="/ico/PacMan.ico">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">
-<script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script> -->
 <body>
 
     <%- partial('_partial/header') %>
@@ -26,9 +26,9 @@
 <canvas class="fireworks" style="position: fixed;left: 0;top: 0;z-index: 1; pointer-events: none;" ></canvas> 
 <script type="text/javascript" src="//cdn.bootcss.com/animejs/2.2.0/anime.min.js"></script> 
 <script type="text/javascript" src="/javascripts/fireworks.js"></script>
-<!--ä¯ÀÀÆ÷¸ãÐ¦±êÌâ-->
+<!--ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ð¦ï¿½ï¿½ï¿½ï¿½-->
 <script type="text/javascript" src="/javascripts/FunnyTitle.js"></script>
-<!--¶¯Ì¬ÏßÌõ±³¾°-->
+<!--ï¿½ï¿½Ì¬ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½-->
 <script type="text/javascript"
 color="220,220,220" opacity='0.7' zIndex="-2" count="200" src="//cdn.bootcss.com/canvas-nest.js/1.0.0/canvas-nest.min.js">
 </script>
