--- a/themes/hexo-theme-aomori/layout/_partial/footer.ejs
+++ b/themes/hexo-theme-aomori/layout/_partial/footer.ejs
@@ -9,7 +9,9 @@
 
     <div class="footer-wrap">
         <div class="footer-inner">
-            <%= config.title %> &copy;<%= date(new Date(), 'YYYY') %>
+            <%= config.title %> &copy;<%= date(new Date(), 'YYYY') %>&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- 备案号 -->
+            湘ICP备2022024995号
             <!-- <br> Powered By Hexo · Theme By 
             <a href="https://github.com/lh1me/hexo-theme-aomori" target="_blank">Aomori</a> -->
         </div>
